k8s/configs/03-sample-apps/ingress-demo/chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-app-ingress
  annotations:
    cert-manager.io/cluster-issuer: "local-ca-issuer"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - example1.kubevious-dev.io
    secretName: hello-app-tls-1
  - hosts: 
    secretName: hello-app-tls-2
  rules:
  - host: "*.kubevious-dev.io"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: hello-service
              port:
                number: 80
  - host: "example1.kubevious-dev.io"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: hello-service
              port:
                number: 80
